# dd-cache

./: README.md  pyproject.toml
cookbook/01_basics/: README.md  main.py  requirements.txt
docs/: DESIGN.md
src/dd_cache/: __init__.py  base.py  models.py  utils.py
src/dd_cache/adapters/: disk.py  memory.py  redis_adapter.py
tests/: conftest.py  test_disk.py  test_memory.py  test_redis.py
